@@ -19,7 +19,7 @@
             "iconUrl": "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/resources/icons/echo_speaks.1x.png",
             "published": true,
             "oAuth": true,
-            "version": "3.6.4.3",
+            "version": "3.6.4.4",
             "appSettings": {},
             "appUrl": "smartapps/tonesto7/echo-speaks.src/echo-speaks.groovy"
         },
@@ -28,7 +28,7 @@
                 "iconUrl": "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/resources/icons/es_actions.png",
                 "published": true,
                 "oAuth": false,
-                "version": "3.6.4.1",
+                "version": "3.6.4.4",
                 "appSettings": {},
                 "appUrl": "smartapps/tonesto7/echo-speaks-actions.src/echo-speaks-actions.groovy",
                 "optional": false
