@@ -15,7 +15,7 @@
             "location": "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/smartapps/tonesto7/echo-speaks.src/echo-speaks.groovy",
             "required": true,
             "oauth": true,
-            "version": "3.6.4.3"
+            "version": "3.6.4.4"
         },
         {
             "id": "cd4762db-aa0b-4d32-98ca-06de955dbc33",
@@ -24,7 +24,7 @@
             "location": "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/smartapps/tonesto7/echo-speaks-actions.src/echo-speaks-actions.groovy",
             "required": true,
             "oauth": false,
-            "version": "3.6.4.1"
+            "version": "3.6.4.2"
         },
         {
             "id": "50ad91a0-eb51-4d6f-98d2-f1654221baa9",
